[package]
name = "edgeware-rpc"
version = "3.4.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"  }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }


substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
tokio = { version = "1.12.0", features = ["macros", "sync"] }

pallet-ethereum = { git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest", features = ["runtime-benchmarks"] }
fc-rpc = { default-features = false, git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest" }
fp-rpc = { default-features = false, git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest" }
fc-rpc-core = { default-features = false, git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest" }
fc-db = { default-features = false, git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest" }
fc-mapping-sync = { default-features = false, git = "https://github.com/edgeware-network/frontier", branch = "erup-5-latest" }

edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }
edgeware-cli-opt = { path = "../cli-opt" }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool" }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
edgeware-rpc-debug = { path = "../../client/rpc/debug" }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
edgeware-rpc-trace = { path = "../../client/rpc/trace" }

[features]
std = []