[package]
name = "edgeware-runtime-interface"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware runtime interface helpers and functions"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
edgeware-primitives = { path = "../primitives" }

[features]
default = [ "std" ]
std = [
  "sp-runtime/std",
  "sp-runtime-interface/std",
]