[package]
name = "edgeware-runtime"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime library"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
evm-runtime = { version = "0.27.0", default-features = false }
log = { version = "0.4.14", default-features = false }

# primitives
sp-application-crypto = { version = "3.0", default-features = false }
sp-authority-discovery = { version = "3.0", default-features = false }
sp-consensus-aura = { version = "0.9", default-features = false }
sp-block-builder = { version = "3.0", default-features = false}
sp-inherents = { version = "3.0", default-features = false }
sp-core = { version = "3.0", default-features = false }
sp-io = { version = "3.0", default-features = false }
sp-std = { version = "3.0", default-features = false }
sp-api = { version = "3.0", default-features = false }
sp-runtime = { version = "3.0", default-features = false }
sp-staking = { version = "3.0", default-features = false }
sp-keyring = { version = "3.0", optional = true }
sp-session = { version = "3.0", default-features = false }
sp-transaction-pool = { version = "3.0", default-features = false }
sp-version = { version = "3.0", default-features = false }
sp-offchain = { version = "3.0", default-features = false }
sp-npos-elections = { version = "3.0", default-features = false }

# edgeware primitives
edgeware-primitives = { version = "3.3.6", path = "../primitives", default-features = false }
edgeware-evm-tracer = { path = "../evm_tracer", default-features = false }
edgeware-rpc-primitives-debug = { path = "../debug", default-features = false }
edgeware-rpc-primitives-txpool = { path = "../txpool", default-features = false }

# pallet dependencies
pallet-assets = { version = "3.0", default-features = false }
pallet-authority-discovery = { version = "3.0", default-features = false }
pallet-authorship = { version = "3.0", default-features = false }
pallet-aura = { version = "3.0", default-features = false }
pallet-balances = { version = "3.0", default-features = false }
pallet-collective = { version = "3.0", default-features = false, features = ["runtime-benchmarks"] }
pallet-contracts = { default-features = false, version = "3.0" }
pallet-contracts-primitives = { default-features = false, version = "3.0" }
pallet-contracts-rpc-runtime-api = { default-features = false, version = "3.0" }
pallet-democracy = { version = "3.0", default-features = false }
pallet-election-provider-multi-phase = { version = "3.0", default-features = false }
pallet-elections-phragmen = { version = "4.0", default-features = false }

frame-executive = { version = "3.0", default-features = false }
pallet-grandpa = { version = "3.0", default-features = false }
pallet-identity = { version = "3.0", default-features = false }
pallet-im-online = { version = "3.0", default-features = false }
pallet-indices = { version = "3.0", default-features = false }
pallet-multisig = { version = "3.0", default-features = false }
pallet-offences = { version = "3.0", default-features = false }
pallet-proxy = { version = "3.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0", default-features = false }
pallet-recovery = { version = "3.0", default-features = false }
pallet-scheduler = { version = "3.0", default-features = false }
pallet-session = { version = "3.0", default-features = false, features = ["historical"] }
pallet-staking = { version = "3.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0" }
pallet-sudo = { version = "3.0", default-features = false }
frame-support = { version = "3.0", default-features = false }
frame-system = { version = "3.0", default-features = false }
frame-system-rpc-runtime-api = { version = "3.0", default-features = false }
pallet-timestamp = { version = "3.0", default-features = false }
pallet-treasury = { version = "3.0", default-features = false }
pallet-tips = { version = "3.0", default-features = false }
pallet-bounties = { version = "3.0", default-features = false }
pallet-utility = { version = "3.0", default-features = false }
pallet-transaction-payment = { version = "3.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0", default-features = false }
pallet-vesting = { version = "3.0", default-features = false }

treasury-reward = { package = "edge-treasury-reward", path = "../../pallets/edge-treasury-reward", default-features = false }

pallet-dynamic-fee = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }
pallet-evm-precompile-curve25519 = { git = "https://github.com/webb-tools/frontier", branch = "erup-4", default-features = false }

sha3 = { version = "0.9", default-features = false }

evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }

# used for runtime benchmarking
frame-benchmarking = { version = "3.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "3.0", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
substrate-wasm-builder = { package = "substrate-wasm-builder", version = "3.0.0" }

[dev-dependencies]
sp-io = { version = "3.0" }

[features]
default = ["std"]
no-reaping = []
beresheet-runtime = []
std = [
	"sha3/std",
	"sp-authority-discovery/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-aura/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-multisig/std",
	"sp-inherents/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"safe-mix/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"pallet-scheduler/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"sp-version/std",
	"sp-offchain/std",
	"edgeware-primitives/std",
	"treasury-reward/std",
	"fp-rpc/std",
	"pallet-ethereum/std",
	"evm-runtime/std",
	"evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-ed25519/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-curve25519/std",
	"pallet-tips/std",
	"pallet-bounties/std",
	"sp-npos-elections/std",
	"edgeware-evm-tracer/std",
	"edgeware-rpc-primitives-debug/std",
	"edgeware-rpc-primitives-txpool/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
]