[package]
name = "edgeware-runtime"
version = "3.3.5"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime library"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
evm-runtime = { version = "0.33.0", default-features = false }
log = { version = "0.4.14", default-features = false }

# primitives
sp-application-crypto = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-authority-discovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-block-builder = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false}
sp-inherents = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-core = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-io = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-std = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-runtime = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-staking = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-keyring = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
sp-session = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-version = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-offchain = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-npos-elections = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }

# edgeware primitives
edgeware-primitives = { path = "../primitives", default-features = false }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", default-features = false }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }

# pallet dependencies
pallet-assets = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-authority-discovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-authorship = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-balances = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-collective = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, features = ["runtime-benchmarks"] }
pallet-contracts = { default-features = false, git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-contracts-primitives = { default-features = false, git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-democracy = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }

frame-executive = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-grandpa = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-identity = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-im-online = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-indices = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-multisig = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-offences = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-proxy = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-recovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-scheduler = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-session = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, features = ["historical"] }
pallet-staking = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-sudo = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
frame-support = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
frame-system = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-timestamp = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-treasury = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-tips = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-bounties = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-utility = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-transaction-payment = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-vesting = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }

treasury-reward = { package = "edge-treasury-reward", path = "../../pallets/edge-treasury-reward", default-features = false }

pallet-dynamic-fee = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }
pallet-evm-precompile-curve25519 = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", default-features = false }

sha3 = { version = "0.9", default-features = false }

evm = { version = "0.33.0", default-features = false, features = ["with-codec"] }

# used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
substrate-wasm-builder = { package = "substrate-wasm-builder", version = "3.0.0" }

[dev-dependencies]
sp-io = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }

[features]
default = ["std"]
no-reaping = []
beresheet-runtime = []
std = [
	"sha3/std",
	"sp-authority-discovery/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-aura/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-multisig/std",
	"sp-inherents/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"safe-mix/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"pallet-scheduler/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"sp-version/std",
	"sp-offchain/std",
	"edgeware-primitives/std",
	"treasury-reward/std",
	"fp-rpc/std",
	"pallet-ethereum/std",
	"evm-runtime/std",
	"evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-ed25519/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-curve25519/std",
	"pallet-tips/std",
	"pallet-bounties/std",
	"sp-npos-elections/std",
	"evm-tracing-events/std",
	"edgeware-rpc-primitives-debug/std",
	"edgeware-rpc-primitives-txpool/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
]